--- a/contao/templates/twig/content_element/bootstrap_youtube_responsive_embed.html.twig
+++ b/contao/templates/twig/content_element/bootstrap_youtube_responsive_embed.html.twig
@@ -1,7 +1,6 @@
-{% extends '@Contao/block_searchable' %}
+{% extends "@Contao/content_element/_base.html.twig" %}
 
 {% block content %}
-
     <div class="ratio ratio-{{ playerAspectRatio }}">
         {% if playerType == 'youtube' %}
             {# https://www.youtube.com/watch?v=###movieId### #}
@@ -10,7 +9,6 @@
             {# Everything from "?v=" belongs to the movieId => a7D3A_wwl0g #}
             <iframe src="//www.youtube.com/embed/{{ movieId|raw }}?rel=0{% if autoplay %}&autoplay=1{% endif %}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         {% endif %}
-
 
         {% if playerType == 'vimeo' %}
             {# https://vimeo.com/###movieId### #}
@@ -34,5 +32,4 @@
     {% if not caption is empty %}
         <div class="videoCaption">{{ caption }}</div>
     {% endif %}
-
 {% endblock %}
